Lightly refactored match.py to reduce code bloat in test_match.py

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,13 @@
 __pycache__/
 **/__pycache__/
 *.bat
+.coverage
+.pytest-cache
+htmlcov.zip
+htmlcov/
 lists/*
 data/*
+junk/*
 model/*
 output*/*
 plots/*
