--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ validation_reports/*
 htmlcov/*
 logs/*
 
+bin/sepval_post_analysis.py
+sphinxval/utils/sepval_post_analysis.py
 
 .DS_Store
 **/.DS_Store
