--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@ reports/*
 validation_reports/*
 htmlcov/*
 logs/*
+**/venv/*
+tests/output/
+tests/logs/
+
+
 
 bin/sepval_post_analysis.py
 sphinxval/utils/sepval_post_analysis.py
